fix #268. search button overlapped by write button

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1157,6 +1157,7 @@
         }
     }
     &.board {
+        width:100%;
         .inner {
             .text { width: 547px; }
         }
